[package]
name = "incremental-file-converter-toml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
toml = "0.5.8"
anyhow = "1.0.51"
incremental-file = { path = "../../../incremental-file" }
